--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -145,6 +145,11 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+
+  }
+
+  img.illustration {
+    filter: invert(40%);;
   }
 
   /*
